--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+}
 :root {
-    --primary: #efb6b2;
+    --primary: #0765e3;
     --secondary: #4e4e4e;
     --error: #ff4a4a;
 }
 
 /* base styles & title */
 body {
-    font-family: 'Noto Serif';
+    font-family: 'Roboto';
+    font-weight: bold;
     color: var(--secondary);
 }
 .App {
-    max-width: 960px;
-    margin: 0 auto;
+    height: 100vh;
 }
 .title h1 {
-    color: var(--primary);
     font-size: 1.2rem;
     letter-spacing: 2px;
-    font-weight: normal;
+    font-size: 5rem;
+    background: -webkit-linear-gradient(var(--primary), #ae01ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-left: 5%;
+    padding-top: 25px;
 }
+
 .title h2,
 .title p {
     text-align: center;
@@ -42,23 +50,25 @@ label input {
 }
 label {
     display: block;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     border: 1px solid var(--primary);
     border-radius: 50%;
     margin: 10px auto;
-    line-height: 30px;
+    line-height: 40px;
     color: var(--primary);
-    font-weight: bold;
+    font-weight: 300;
     font-size: 24px;
 }
 label:hover {
-    background: var(--primary);
+    background: -webkit-linear-gradient(#0765e3, #ae01ff);
     color: white;
 }
 .output {
     height: 60px;
     font-size: 0.8rem;
+    max-width: 900px;
+    margin: 0 auto;
 }
 .error {
     color: var(--error);
@@ -67,32 +77,35 @@ label:hover {
 /* progress bar styles */
 .progress-bar {
     height: 5px;
-    background: var(--primary);
+    background: -webkit-linear-gradient(90deg, #0765e3, #ae01ff);
     margin-top: 20px;
 }
 
 /* image grid styles */
+.img-grid .img-wrap:nth-child(3n + 2) {
+    grid-column-end: span 2;
+}
 .img-grid {
-    margin: 20px auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 40px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 2em;
+    grid-auto-flow: dense;
+    list-style: none;
+    margin: 1em auto;
+    padding: 0;
+    max-width: 1000px;
 }
 .img-wrap {
     overflow: hidden;
-    height: 0;
-    padding: 50% 0;
-    /* padding controls height, will always be perfectly square regardless of width */
-    position: relative;
     opacity: 0.8;
 }
 .img-wrap img {
-    min-width: 100%;
-    min-height: 100%;
     max-width: 150%;
-    position: absolute;
-    top: 0;
-    left: 0;
+    display: block;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    max-height: 300px;
 }
 
 /* modal styles */
